ui fix z-index in attendance scan and text center in attendance icon table

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,7 +18,3 @@ footer nav a {
     font-size: 1.1rem;
     color: inherit;
 }
-
-.select2-container {
-    z-index: 1067 !important;
-}
